refactor(linkding): update security headers and instructions
Updated Linkding configuration to improve security by replacing the generic `secure-headers@file` middleware with specific headers, and enhanced the installation instructions for the browser extension.

- Replaced `secure-headers@file` with specific Traefik headers for Linkding to enforce `same-origin` referrer policy and other security measures.
- Updated `POST_INSTALL.md` to use a bulleted list for browser extension links and added a note about setting up an authentication token.
- Added a note in `README.md` regarding Linkding integration with Floccus.
- Modified `roles/linkding/tasks/main.yml` to dynamically set `LD_CSRF_TRUSTED_ORIGINS` based on the subdomain and server hostname.
- Introduced `linkding-headers` middleware in `roles/linkding/tasks/main.yml` for granular control over security headers.

--- a/roles/linkding/tasks/main.yml
+++ b/roles/linkding/tasks/main.yml
@@ -25,14 +25,28 @@
     env:
       LD_SUPERUSER_NAME: "{{ admin_username }}"
       LD_SUPERUSER_PASSWORD: "{{ admin_userldappassword }}"
-      LD_CSRF_TRUSTED_ORIGINS: "https://*,http://*"
+      LD_CSRF_TRUSTED_ORIGINS: "https://{{ linkding_subdomain }}.{{ server_hostname }}"
     networks:
       - name: "web"
     labels:
       traefik.enable: "true"
       traefik.http.routers.linkding.rule: "Host(`{{ linkding_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.linkding.loadbalancer.server.port: "9090"
-      traefik.http.routers.linkding.middlewares: "secure-headers@file"
+
+      # Replaces secure-headers@file to fix Referrer-Policy causing Origin: null (same-origin needed)
+      traefik.http.middlewares.linkding-headers.headers.stsSeconds: "31536000"
+      traefik.http.middlewares.linkding-headers.headers.stsIncludeSubdomains: "true"
+      traefik.http.middlewares.linkding-headers.headers.stsPreload: "true"
+      traefik.http.middlewares.linkding-headers.headers.forceSTSHeader: "true"
+      traefik.http.middlewares.linkding-headers.headers.contentTypeNosniff: "true"
+      traefik.http.middlewares.linkding-headers.headers.browserXssFilter: "true"
+      traefik.http.middlewares.linkding-headers.headers.referrerPolicy: "same-origin"
+      # throw https and domain
+      traefik.http.middlewares.linkding-headers.headers.customrequestheaders.X-Forwarded-Proto: "https"
+      traefik.http.middlewares.linkding-headers.headers.customrequestheaders.X-Forwarded-Host: "{{ linkding_subdomain }}.{{ server_hostname }}"
+
+      traefik.http.routers.linkding.middlewares: "linkding-headers"
+
       com.centurylinklabs.watchtower.enable: "true"
 
       homepage.group: "Services"
